--- a/src/guppy.glade
+++ b/src/guppy.glade
@@ -457,7 +457,7 @@
 		      <child>
 			<widget class="GtkLabel" id="pvr_total_size_label">
 			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">Selection Size: 4.0GB</property>
+			  <property name="label" translatable="yes">Selection Size:</property>
 			  <property name="use_underline">False</property>
 			  <property name="use_markup">False</property>
 			  <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -543,7 +543,7 @@
 		      <child>
 			<widget class="GtkLabel" id="pc_total_size_label">
 			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">Selection Size: 500 MB</property>
+			  <property name="label" translatable="yes">Selection Size:</property>
 			  <property name="use_underline">False</property>
 			  <property name="use_markup">False</property>
 			  <property name="justify">GTK_JUSTIFY_FILL</property>
