--- a/src/guppy.glade
+++ b/src/guppy.glade
@@ -19,7 +19,7 @@
   <property name="type_hint">GDK_WINDOW_TYPE_HINT_NORMAL</property>
   <property name="gravity">GDK_GRAVITY_NORTH_WEST</property>
   <property name="focus_on_map">True</property>
-  <signal name="delete_event" handler="on_guppy_window_delete_event" last_modification_time="Wed, 15 Jun 2005 10:04:32 GMT"/>
+  <signal name="delete_event" handler="on_window_delete_event" last_modification_time="Wed, 15 Jun 2005 10:04:32 GMT"/>
 
   <child>
     <widget class="GtkVBox" id="vbox1">
