--- a/guppy/guppy.glade
+++ b/guppy/guppy.glade
@@ -333,6 +333,7 @@
 		      <property name="relief">GTK_RELIEF_NORMAL</property>
 		      <property name="focus_on_click">True</property>
 		      <signal name="clicked" handler="on_transfer_close_btn_clicked" last_modification_time="Tue, 06 Sep 2005 02:25:06 GMT"/>
+		      <accelerator key="w" modifiers="GDK_CONTROL_MASK" signal="clicked"/>
 		    </widget>
 		    <packing>
 		      <property name="padding">0</property>
@@ -351,6 +352,7 @@
 		      <property name="relief">GTK_RELIEF_NORMAL</property>
 		      <property name="focus_on_click">True</property>
 		      <signal name="clicked" handler="on_transfer_clear_btn_clicked" last_modification_time="Tue, 06 Sep 2005 02:30:09 GMT"/>
+		      <accelerator key="C" modifiers="GDK_CONTROL_MASK" signal="clicked"/>
 		    </widget>
 		    <packing>
 		      <property name="padding">0</property>
