Separate PVR error window into its own class. Hook up Clear button.
git-archimport-id: tsui.tony@gmail.com--projects/guppy--dev--0.0.1--patch-63

--- a/guppy/guppy.glade
+++ b/guppy/guppy.glade
@@ -999,8 +999,8 @@
 	<widget class="GtkScrolledWindow" id="scrolledwindow4">
 	  <property name="visible">True</property>
 	  <property name="can_focus">True</property>
-	  <property name="hscrollbar_policy">GTK_POLICY_ALWAYS</property>
-	  <property name="vscrollbar_policy">GTK_POLICY_ALWAYS</property>
+	  <property name="hscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
+	  <property name="vscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
 	  <property name="shadow_type">GTK_SHADOW_NONE</property>
 	  <property name="window_placement">GTK_CORNER_TOP_LEFT</property>
 
@@ -1074,6 +1074,7 @@
 	      <property name="use_stock">True</property>
 	      <property name="relief">GTK_RELIEF_NORMAL</property>
 	      <property name="focus_on_click">True</property>
+	      <signal name="clicked" handler="on_pvr_error_window_clear" last_modification_time="Thu, 12 Jan 2006 07:48:15 GMT"/>
 	    </widget>
 	    <packing>
 	      <property name="padding">0</property>
