Show transfer failures in PVR error window.
git-archimport-id: tsui.tony@gmail.com--projects/guppy--dev--0.0.1--patch-66

--- a/guppy/guppy.glade
+++ b/guppy/guppy.glade
@@ -147,6 +147,7 @@
 
 			  <child>
 			    <widget class="GtkButton" id="pvr_error_btn">
+			      <property name="border_width">2</property>
 			      <property name="can_focus">True</property>
 			      <property name="relief">GTK_RELIEF_NORMAL</property>
 			      <property name="focus_on_click">True</property>
