Set PVR error window title
git-archimport-id: tsui.tony@gmail.com--projects/guppy--dev--0.0.1--patch-67

--- a/guppy/guppy.glade
+++ b/guppy/guppy.glade
@@ -974,7 +974,7 @@
 </widget>
 
 <widget class="GtkWindow" id="pvr_error_window">
-  <property name="title" translatable="yes">window1</property>
+  <property name="title" translatable="yes">PVR Error Window</property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
   <property name="window_position">GTK_WIN_POS_NONE</property>
   <property name="modal">False</property>
