Add tooltip for Warning button.
git-archimport-id: tsui.tony@gmail.com--projects/guppy--dev--0.0.1--patch-81

--- a/guppy/guppy.glade
+++ b/guppy/guppy.glade
@@ -150,6 +150,7 @@
 			  <child>
 			    <widget class="GtkButton" id="pvr_error_btn">
 			      <property name="border_width">2</property>
+			      <property name="tooltip" translatable="yes">Show Errors Communicating with the PVR</property>
 			      <property name="can_focus">True</property>
 			      <property name="label">gtk-dialog-warning</property>
 			      <property name="use_stock">True</property>
