--- a/guppy/guppy.glade
+++ b/guppy/guppy.glade
@@ -367,7 +367,7 @@
 			      <child>
 				<widget class="GtkImage" id="image4">
 				  <property name="visible">True</property>
-				  <property name="pixbuf">rocket.png</property>
+				  <property name="pixbuf">turbo.png</property>
 				  <property name="xalign">0.5</property>
 				  <property name="yalign">0.5</property>
 				  <property name="xpad">0</property>
