--- a/guppy/guppy.glade
+++ b/guppy/guppy.glade
@@ -21,7 +21,6 @@
   <property name="type_hint">GDK_WINDOW_TYPE_HINT_NORMAL</property>
   <property name="gravity">GDK_GRAVITY_NORTH_WEST</property>
   <property name="focus_on_map">True</property>
-  <property name="urgency_hint">False</property>
   <signal name="delete_event" handler="on_window_delete_event" last_modification_time="Wed, 15 Jun 2005 10:04:32 GMT"/>
 
   <child>
@@ -795,7 +794,6 @@
   <property name="type_hint">GDK_WINDOW_TYPE_HINT_NORMAL</property>
   <property name="gravity">GDK_GRAVITY_NORTH_WEST</property>
   <property name="focus_on_map">True</property>
-  <property name="urgency_hint">False</property>
 
   <child>
     <widget class="GtkVBox" id="progress_box">
@@ -1086,11 +1084,10 @@
   <property name="type_hint">GDK_WINDOW_TYPE_HINT_NORMAL</property>
   <property name="gravity">GDK_GRAVITY_NORTH_WEST</property>
   <property name="focus_on_map">True</property>
-  <property name="urgency_hint">False</property>
   <signal name="delete_event" handler="on_pvr_error_window_close" last_modification_time="Fri, 13 Jan 2006 22:53:06 GMT"/>
 
   <child>
-    <widget class="GtkVBox" id="vbox3">
+    <widget class="GtkVBox" id="pvr_error_box">
       <property name="border_width">12</property>
       <property name="visible">True</property>
       <property name="homogeneous">False</property>
@@ -1132,6 +1129,7 @@
 	  <property name="can_focus">True</property>
 	  <property name="expanded">False</property>
 	  <property name="spacing">0</property>
+	  <signal name="activate" handler="on_expander_activate" last_modification_time="Sun, 26 Feb 2006 23:13:16 GMT"/>
 
 	  <child>
 	    <widget class="GtkScrolledWindow" id="scrolledwindow8">
