--- a/guppy/guppy.glade
+++ b/guppy/guppy.glade
@@ -15,6 +15,7 @@
   <property name="default_height">700</property>
   <property name="resizable">True</property>
   <property name="destroy_with_parent">False</property>
+  <property name="icon">guppy.png</property>
   <property name="decorated">True</property>
   <property name="skip_taskbar_hint">False</property>
   <property name="skip_pager_hint">False</property>
